# todos_rest_api

./: .gitignore  README.md  docker-compose.yml
api/: .coveragerc  Dockerfile  pyproject.toml
api/src/adapters/: repository.py  session.py
api/src/auth/: token.py  token_handler.py
api/src/azure/: key_vault.py
api/src/config/: settings.py
api/src/domain/: model.py  schema.py
api/src/entrypoints/: fastapi_app.py
api/src/entrypoints/routers/: items.py  token.py
api/src/repository/: repository.py
api/src/service/: connector.py  services.py  session.py  unit_of_work.py
api/src/service_layer/: services.py  unit_of_work.py
api/src/utils/: exception_handlers.py  exceptions.py
api/tests/: conftest.py
api/tests/unit/: test_azure_key_vault.py  test_fastapi_entrypoint.py  test_model.py  test_repository.py  test_service.py  test_uow.py
sql/: prepare_data.sql
