[tool.poetry]
name = "todos-rest-api"
version = "0.1.0"
description = ""
authors = ["Kamil Owczarek <kamil.owczarek03@gmail.com>"]
readme = "README.md"
packages = [{include = "todos_rest_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"
pyjwt = "^2.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
