[tool.poetry]
name = "todos-rest-api"
version = "0.1.0"
description = ""
authors = ["Kamil Owczarek <kamil.owczarek03@gmail.com>"]
readme = "README.md"
packages = [{include = "todos_rest_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"
pyjwt = "^2.7.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
pytest-cov = "^4.0.0"
pytest-env = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc --cov=. --cov-report=xml --cov-report term-missing --no-cov-on-fail --junitxml=test_output.xml"
env = [
    "jwt_secret=test",
    "db_user=test",
    "db_password=test",
    "db_host=test",
    "db_port=5432",
    "db_name=test",
]